hphp/hack/test/typecheck/loader_example.php.like_types.exp
File "loader_example.php", line 43, characters 11-12:
Invalid argument (Typing[4110])
File "loader_example.php", line 17, characters 27-30:
Expected ~<expr#1> because it is an unenforceable type
File "loader_example.php", line 12, characters 23-38:
  resulting from expanding the type constant <expr#1>::TLoadsType
File "loader_example.php", line 43, characters 3-4:
  where '<expr#1>' is a reference to this expression
File "loader_example.php", line 31, characters 49-55:
But got <expr#2>
File "loader_example.php", line 43, characters 11-12:
  where '<expr#2>' is a reference to this expression
